# rs-checkers

./: Cargo.toml  README.md
.github/workflows/: rust.yml
checkers_app/: Cargo.toml
checkers_app/src/: main.rs  ui.rs
checkers_app/ui/: app.slint
checkers_core/: Cargo.toml
checkers_core/src/: board.rs  game_manager.rs  lib.rs  move_controller.rs  movement.rs  piece.rs
checkers_core/src/ai/: minimax.rs  mod.rs
checkers_core/src/board/: mod.rs  position.rs
checkers_core/src/board/movement/: direction.rs  mod.rs
checkers_core/src/board/piece/: mod.rs  side.rs
