[workspace]
members = ["checkers_core", "checkers_app"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0"
authors = ["Oleksii Kostyk"]
repository = "https://github.com/kitmelancholic/rs-checkers"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "allow"

[workspace.dependencies]
eframe = "0.32.3"
egui = "0.32.3"
egui_dnd = "0.13.0"
egui_extras = "0.32.3"
image = "0.25.8"
